# ABOC

./: Octree.py  README.md  ablation_frequency.py  attentionModel.py  benchmark_data_prep.py  benchmark_tf.py  colab_benchmark.ipynb  colab_data_prep.ipynb  colab_training.ipynb  compile_schema.sh  config.py  dataPrepare.py  dataPrepare_full.py  dataset.py  decoder.py  decoder_tf.py  decoder_tf_parallel.py  encoder.py  encoderTool.py  encoder_tf.py  generate_subset.py  networkTool.py  octAttention.py  pt.py  pyproject.toml  schema.fbs  test_compression.py  tf_model.py
OctreeCPP/: Octreewarpper.py
OctreeData/: Dataset.py  OctreeNode.py
Preparedata/: data.py
modelsave/lidar/: checkpoints_model_epoch_50.weights.h5
numpyAc/: numpyAc.py
numpyAc/backend/: numpyAc_backend.cpp
