[tool.poetry]
name = "octattention"
version = "0.1.0"
description = ""
authors = ["Michael Nutt <michaelnutt2@my.unt.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
torch = {version = "^2.3.0+cpu", source = "pytorch_cpu"}
hdf5storage = "^0.1.19"
ninja = "^1.11.1.4"
tqdm = "^4.67.1"
matplotlib = "^3.10.1"
h5py = "^3.13.0"
plyfile = "^1.1"
scipy = "^1.15.2"
flatbuffers = "^25.9.23"
tensorflow = "^2.20.0"
gcsfs = "^2025.12.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
